Fixes/cleanup