@@ -97,14 +97,14 @@ public class CrystalbornCatalystBlockEntity extends BaseContainerBlockEntity {
 						}
 					});
 				}
-				if (isFuel(entity.items.getFirst())) {
+				if (isFuel(entity.items.get(0))) {
 					entity.charge++;
 				} else {
 					entity.charge--;
 				}
 				entity.charge = Mth.clamp(entity.charge, 0, 30);
 				if (entity.charge == 30) {
-					entity.items.getFirst().shrink(1);
+					entity.items.get(0).shrink(1);
 					entity.energyLeft += ESConfig.INSTANCE.itemsConfig.crystalbornCatalyst.energyPerShard();
 					for (int i = 0; i <= 10; i++) {
 						ESPlatform.INSTANCE.sendToAllClients(serverLevel, new ParticlePacket(ExplosionShockParticleOptions.CRYSTAL, pos.getCenter().x + (entity.random.nextFloat() - 0.5f) * 4, pos.getY(), pos.getCenter().z + (entity.random.nextFloat() - 0.5f) * 4, 0, 1, 0));
